# unforget

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
benchmarks/locomo/: run.py
scripts/: generate_api_docs.py  release.sh
src/unforget/: __init__.py  api.py  associations.py  cache.py  chunker.py  consolidation.py  embedder.py  entities.py  ingest.py  quotas.py  reranker.py  retrieval.py  scheduler.py  schema.py  scoped.py  store.py  temporal.py  tools.py  types.py
src/unforget/integrations/: __init__.py  anthropic.py  openai.py  streaming.py
tests/: conftest.py  test_api.py  test_associations.py  test_cache.py  test_chunker.py  test_consolidation.py  test_embedder.py  test_entities.py  test_ingest.py  test_production.py  test_quotas.py  test_reranker.py  test_retrieval.py  test_scheduler.py  test_store.py  test_streaming.py  test_temporal.py  test_tools.py  test_types.py
